# ar

app/: CMakeLists.txt  build.gradle
app/libs/: huaweiarDepth (1).yuv  huaweiarDepth.yuv  huaweiarYUV (1).yuv  huaweiarYUV.yuv
app/libs/include/huawei/: DeviceInterface.h
app/src/androidTest/java/appmagics/avatardemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/avatarAB/: pc_chuchu02.assetbundle  pc_minecraft01.assetbundle  pc_minecraft02.assetbundle  pc_panda.assetbundle  pc_paofu.assetbundle  pc_tieguo.assetbundle  pc_witch.assetbundle  pc_xiningjun.assetbundle
app/src/main/assets/table/: AnimatorMotionConfig.txt  CharacterAssetInfo.txt  ModelMorphData.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/appmagics/: avatardemo_fix.7z
app/src/main/java/appmagics/avatardemo/: ARCamera.java  CameraInterface.java  CameraSurfaceView.java  LogUtil.java  MainActivity.java  TakePictureInterface.java  TestActivity.java  TrackUtil.java  Tracker.java  Utils.java
app/src/main/res/layout/: activity_main.xml  u3d_layout.xml
app/src/test/java/appmagics/avatardemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
